# course-info

./: README.md  hybrid-tips.md  schedule.md  syllabus.md  tech-tips.md
week01_introductions/: README.md  slack-intro.md
week02_databases/: README.md  sql-01-load-and-explore-data.md  sql-02-work-with-dates.md
week03_postgis/: README.md  sql-03-exploring-geo.md  sql-04-joining-datasets.md
week04_joins_and_indexes/: README.md
week04_joins_and_indexes/lateral_joins_example/: .gitignore  README.md  REGENERATE_DATA.md  init_cc_tables.sql  make_cc_table.py  make_purchase_table.py
week04_joins_and_indexes/lateral_joins_example/libs/: cc_gen.py  record_time.py
week05_cloud_services/: README.md
week06_data_in_python/: README.md  postgis_setup.md
week06_data_in_python/getting_started/: README.md  load_data.py  pyproject.toml
week06_python/: README.md
week07_remote_services/download_data/: data_exploration.ipynb
week07_web_services/: README.md
week07_web_services/download_data/: README.md  download_data.py  pyproject.toml
week08_cloud_services_in_python/: README.md
week08_cloud_services_in_python/lab04_conversion_to_cloud/: README.md  pipeline_01_download_addresses.py  pipeline_01_download_addresses_with_function.py
week12_templates_and_data_modeling/: .gitignore
week12_templates_and_data_modeling/jinja_example/: describe_course.py
week12_templates_and_data_modeling/jinja_example/templates/: index.html
week13_intro_to_css/: sample.html
