[tool.poetry]
name = "getting_started"
version = "0.1.0"
description = ""
authors = ["Mjumbe Poe <mjumbewu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
geopandas = "^0.10.0"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.25"
ipython = "^7.28.0"
GeoAlchemy2 = "^0.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
