[tool.poetry]
name = "download_data"
version = "0.1.0"
description = ""
authors = ["Mjumbe Poe <mjumbewu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
geopandas = "^0.10.1"
GeoAlchemy2 = "^0.9.4"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
geopandas = "^0.10.1"
jupyter = "^1.0.0"
jupyterlab = "^3.1.18"
jupyterlab-geojson = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
